--- a/src/main/webapp/inicioSesion.xhtml
+++ b/src/main/webapp/inicioSesion.xhtml
@@ -55,7 +55,7 @@
                         <br><p:inputText id="contrasena"  placeholder="&#128272; Contraseña" type="password" value="#{inicioBean.contrasena}" > </p:inputText></br>
                 </div>
                 <div id="Botones">
-                        <p:commandButton  id ="enviar"  value="login" actionListener="#{inicioBean.consultar(inicioBean.email)}"  action= "home.xhtml" />  
+                        <p:commandButton  id ="enviar"  value="login" actionListener="#{inicioBean.consultar(inicioBean.email)}"  action= "home" />  
                 </div>
             </h:form>
         </center>
