--- a/src/main/webapp/ModificarIniciativas.xhtml
+++ b/src/main/webapp/ModificarIniciativas.xhtml
@@ -52,20 +52,20 @@
     
 	<h:body style="overflow-x:hidden; overflow-y:scroll">
             <h:form id="IniciativasForm">
-              <p:dataTable  id="iniciativas_tabla" var="iniciativa" value="#{administradorBean.iniciativas}" scrollable="true" scrollHeight="300" >
-                <p:column headerText="Descripcion">
+                <p:dataTable  id="iniciativas_tabla" rows="3" paginator="true" var="iniciativa" value="#{administradorBean.getIniciativas()}" scrollable="true" scrollHeight="300" >
+                    <p:column headerText="Descripcion" >
                             <h:outputText value="#{iniciativa.descripcion}" />
                 </p:column>
-                <p:column headerText="Estado">
+                <p:column headerText="Estado" >
                             <h:outputText value="#{iniciativa.estado}" />
                 </p:column>
-                <p:column headerText="Fecha_Creacion">
+                <p:column headerText="Fecha_Creacion" >
                     <h:outputText value="#{iniciativa.fechaCreacion}" />
                 </p:column>
-                <p:column headerText="Area">
+                <p:column headerText="Area" >
                     <h:outputText value="#{iniciativa.usuario.area}" />
 		</p:column>
-                <p:column headerText="Palabras clave">
+                <p:column headerText="Palabras clave" >
                     <h:outputText value="#{iniciativa.palabrasClave}" />
 		</p:column>
                 <p:column headerText="Iniciativa">
