--- a/src/main/webapp/home.xhtml
+++ b/src/main/webapp/home.xhtml
@@ -44,6 +44,10 @@
                             <li>
                                 <h:link outcome="VerIniciativas" rendered="#{inicioBean.usuario.rol != 'Administrador'}" ><i class="fa fa-list" style="font-size:24px"></i>Ver Iniciativas</h:link><!-- para Proponente y publico -->
                             </li>
+                            
+                            <li>
+                                <h:link outcome="graficas" ><i class="fa fa-bar-chart" style="font-size:24px"></i>Ver Estadisticas</h:link><!-- para Proponente y publico -->
+                            </li>
                             <li>
                                  <h:form>                                                  
                                      <p:commandButton  value="Cerrar sesion" actionListener="#{inicioBean.reiniciar()}" action="Inicio" style="background-color: #ffffff; color: #006666; font-weight: bold; outline: none; border-color: #ffffff; font-size: 14px" ></p:commandButton> 
