--- a/src/main/webapp/inicioSesion.xhtml
+++ b/src/main/webapp/inicioSesion.xhtml
@@ -25,16 +25,16 @@
                         <a class="toggleMenu" href="#" style="display: none;">Menu</a>
                          <ul class="nav" style="display: block;">
                                 <li>
-                                     <a href="Inicio.xhtml"><i class="fa fa-home" style="font-size:24px"></i>Inicio</a>
+                                     <a href="Inicio.xhtml"><i class="fa fa-home" style="font-size:35px"></i>Inicio</a>
                                  </li>
                                  <li>
-                                         <a href="inicioSesion.xhtml"><i class="fa fa-user" style="font-size:24px"></i>Iniciar Sesion</a>
+                                         <a href="inicioSesion.xhtml"><i class="fa fa-user" style="font-size:35px"></i>Iniciar Sesion</a>
                                  </li>
                                  <li>
-                                     <a href="Registro.xhtml"><i class=" fa fa-edit" style="font-size:24px" ></i>Registrarse</a>
+                                     <a href="Registro.xhtml"><i class=" fa fa-edit" style="font-size:35px" ></i>Registrarse</a>
                                  </li>
                                 <li>
-                                         <a href=""><i class=" fa fa-phone-square" style="font-size:24px"></i>Contactenos</a>
+                                         <a href=""><i class=" fa fa-phone-square" style="font-size:35px"></i>Contactenos</a>
                                 </li> 
                          </ul>
                      </div>
@@ -43,10 +43,9 @@
                 
             
         <center>
-            <h:form id="cliente_form"   onsubmit="return validar();">
+            <h:form class="contenedor">
                 <div id="imagenLog">
                     <img src="Recursos\login.png" width="20%" height="20%" />
-
                 </div>
                 <div id="Cuadro_email">
                         <br><p:inputText id="correo" placeholder="&#128386; Correo" value="#{inicioBean.email}" > </p:inputText></br>
