--- a/src/main/webapp/home.xhtml
+++ b/src/main/webapp/home.xhtml
@@ -46,7 +46,7 @@
                             </li>
                             
                             <li>
-                                <h:link outcome="graficas" ><i class="fa fa-bar-chart" style="font-size:30px"></i>Ver Estadisticas</h:link><!-- para Proponente y publico -->
+                                <h:link outcome="graficas" onclick="#{chartView.listar()}" ><i class="fa fa-bar-chart" style="font-size:30px"></i>Ver Estadisticas</h:link><!-- para Proponente y publico -->
                             </li>
                             <li>
                                  <h:form>                                                  
