--- a/src/main/webapp/graficas.xhtml
+++ b/src/main/webapp/graficas.xhtml
@@ -42,7 +42,7 @@
                                 <h:link outcome="VerIniciativas" rendered="#{inicioBean.usuario.rol != 'Administrador'}" ><i class="fa fa-list" style="font-size:24px"></i>Ver Iniciativas</h:link><!-- para Proponente y publico -->
                             </li>
                             <li>
-                                <h:link outcome="graficas" ><i class="fa fa-bar-chart" style="font-size:24px"></i>Ver Estadisticas</h:link><!-- para Proponente y publico -->
+                                <h:link outcome="graficas"  onclick="#{chartView.listar()}"><i class="fa fa-bar-chart" style="font-size:24px"></i>Ver Estadisticas</h:link><!-- para Proponente y publico -->
                             </li>
                             <li>
                                  <h:form>                                                  
@@ -55,9 +55,6 @@
         </section>
         <h:form >
             <center>
-                <p:commandButton value="Generar Estadisticas" actionListener="#{chartView.listar()}" update="Areas"></p:commandButton>
-            
-            
             <p:panel id="Areas">
                             <h:panelGrid columns="2" cellpadding="10" >
                                     <p:chart type="pie" model="#{chartView.pieMode2}" style="height:50%; width: 30%" rendered="#{chartView.pieMode2 != null}" />
