--- a/src/main/webapp/graficas.xhtml
+++ b/src/main/webapp/graficas.xhtml
@@ -55,10 +55,12 @@
         </section>
         <h:form >
             <center>
-            <p:panel id="Areas">
-                            <h:panelGrid columns="2" cellpadding="10" >
-                                    <p:chart type="pie" model="#{chartView.pieMode2}" style="height:50%; width: 30%" rendered="#{chartView.pieMode2 != null}" />
-                                  <p:chart type="bar" model="#{chartView.pieModel}" style="height:50%; width: 30%" rendered="#{chartView.pieModel != null}" widgetVar="char1"/>
+            <p:panel id="Areas" style="width: 100%; height: 25%;">
+                <h:panelGrid columns="4" cellpadding="10"  >
+                                  <p:chart type="pie" model="#{chartView.pieMode2}" style="height:10%; width: 10%" rendered="#{chartView.pieMode2 != null}" />
+                                  <p:chart type="bar" model="#{chartView.pieModel}" style="height:25%; width: 15%" rendered="#{chartView.pieModel != null}" widgetVar="char1"/>
+                                  <p:chart type="pie" model="#{chartView.pieMode4}" style="height:10%; width: 10%" rendered="#{chartView.pieMode4 != null}" />
+                                  
                             </h:panelGrid>
             </p:panel>
             </center>
