--- a/src/main/webapp/perfilIniciativa.xhtml
+++ b/src/main/webapp/perfilIniciativa.xhtml
@@ -9,6 +9,9 @@
         <title></title>
 		<link rel="stylesheet" href="Recursos/usuarios.css" />
                 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"></link>
+            <f:metadata>
+                <f:viewAction action="#{iniciativaBean.cambioPagina()}" />
+            </f:metadata>
 	</h:head>
 	<h:body >
             <f:metadata>
