--- a/src/main/webapp/consultarIniciativaRefactor.xhtml
+++ b/src/main/webapp/consultarIniciativaRefactor.xhtml
@@ -87,6 +87,11 @@
                 <p:column headerText="Ver Comentarios">
 			<p:button outcome="verComentarios.xhtml?id=#{iniciativa.id}" value="Ver Comentarios" />
 		</p:column>
+                <p:column headerText="Me gusta">
+                    <center style="margin-top: 20%; margin-bottom: 10%">
+                        <p:commandButton  value="#{iniciativaBean.consultarLikes(iniciativa.id)}" actionListener="#{iniciativaBean.likes(iniciativa.id, inicioBean.usuario.id)}" class="fa fa-thumbs-up" style="background: none; color: #0f8279; font-size:210%;color:cornflowerblue ;border:none "> </p:commandButton>
+                    </center>
+		</p:column>
             </p:dataTable>
 
 
